[gd_scene load_steps=23 format=2]

[ext_resource path="res://UI/fonts/GravityBold8.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Equation/Equation.gd" type="Script" id=2]
[ext_resource path="res://UI/Equation/numbers/plus.gd" type="Script" id=3]
[ext_resource path="res://UI/Equation/numbers/first.gd" type="Script" id=4]
[ext_resource path="res://UI/Equation/numbers/second.gd" type="Script" id=5]
[ext_resource path="res://UI/Equation/Clock/numbered clock/Numbered Clocks/Numbered Clocks/Numbered Clocks_10-Clock 05-Tick.png" type="Texture" id=6]
[ext_resource path="res://UI/Equation/Clock/numbered clock/Numbered Clocks/Numbered Clocks/Numbered Clocks_10-Clock 06-Tick.png" type="Texture" id=7]
[ext_resource path="res://UI/Equation/Clock/numbered clock/Numbered Clocks/Numbered Clocks/Numbered Clocks_10-Clock 07-Tick.png" type="Texture" id=8]
[ext_resource path="res://UI/Equation/Clock/numbered clock/Numbered Clocks/Numbered Clocks/Numbered Clocks_10-Clock 09-Tick.png" type="Texture" id=9]
[ext_resource path="res://UI/Equation/Clock/numbered clock/Numbered Clocks/Numbered Clocks/Numbered Clocks_10-Clock 03-Tick.png" type="Texture" id=10]
[ext_resource path="res://UI/Equation/Clock/numbered clock/Numbered Clocks/Numbered Clocks/Numbered Clocks_10-Clock 10-Tick.png" type="Texture" id=11]
[ext_resource path="res://UI/Equation/Clock/numbered clock/Numbered Clocks/Numbered Clocks/Numbered Clocks_10-Clock 01-Tick.png" type="Texture" id=12]
[ext_resource path="res://UI/Equation/Clock/numbered clock/Numbered Clocks/Numbered Clocks/Numbered Clocks_10-Clock 00-Tick.png" type="Texture" id=13]
[ext_resource path="res://UI/Equation/Clock/numbered clock/Numbered Clocks/Numbered Clocks/Numbered Clocks_10-Clock 08-Tick.png" type="Texture" id=14]
[ext_resource path="res://UI/Equation/Clock/numbered clock/Numbered Clocks/Numbered Clocks/Numbered Clocks_10-Clock 04-Tick.png" type="Texture" id=15]
[ext_resource path="res://UI/Equation/Clock/numbered clock/Numbered Clocks/Numbered Clocks/Numbered Clocks_10-Clock 02-Tick.png" type="Texture" id=16]
[ext_resource path="res://UI/clock/clock.gd" type="Script" id=17]
[ext_resource path="res://UI/Equation/gunshot.wav" type="AudioStream" id=18]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0.52549, 0.239216, 0.239216, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": false,
"name": "clock",
"speed": 5.0
} ]

[node name="Equation" type="Node2D"]
script = ExtResource( 2 )

[node name="first" type="Node2D" parent="."]
position = Vector2( -94.848, 2 )
script = ExtResource( 4 )
duration = 0.7

[node name="First" type="Label" parent="first"]
visible = false
margin_left = -37.3928
margin_top = -23.7452
margin_right = 42.6072
margin_bottom = 24.2548
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.501961, 0.121569, 0.121569, 1 )
custom_colors/font_color_shadow = Color( 1, 0.0235294, 0.0235294, 1 )
custom_constants/line_spacing = 3
custom_constants/shadow_offset_y = 3
text = "H"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="tween" type="Tween" parent="first"]

[node name="First_Timer" type="Timer" parent="first"]
wait_time = 0.5
one_shot = true

[node name="plus" type="Node2D" parent="."]
script = ExtResource( 3 )
duration = 0.7

[node name="tween" type="Tween" parent="plus"]

[node name="Plus_Timer" type="Timer" parent="plus"]
wait_time = 0.5
one_shot = true

[node name="plus" type="Label" parent="plus"]
visible = false
margin_left = -12.2932
margin_top = -15.3418
margin_right = 15.7068
margin_bottom = 16.6582
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="second" type="Node2D" parent="."]
position = Vector2( 99.848, 0 )
script = ExtResource( 5 )
duration = 0.7

[node name="second" type="Label" parent="second"]
visible = false
margin_left = -56.5612
margin_top = -79.1326
margin_right = 64.4388
margin_bottom = 70.8674
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.156863, 0.403922, 0.92549, 1 )
custom_colors/font_color_shadow = Color( 0.0705882, 0.380392, 0.968627, 1 )
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 4
text = "h"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="tween" type="Tween" parent="second"]

[node name="Second_Timer" type="Timer" parent="second"]
wait_time = 0.5
one_shot = true

[node name="Duration_timer" type="Timer" parent="."]
wait_time = 2.6
one_shot = true

[node name="clock" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 79.293 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 17 )
final_scale = Vector2( 0.25, 0.25 )
previous_scale = Vector2( 2, 2 )

[node name="tween" type="Tween" parent="clock"]

[node name="clock_anim" type="AnimatedSprite" parent="clock"]
position = Vector2( 0, 79.293 )
frames = SubResource( 4 )
animation = "clock"
__meta__ = {
"_editor_description_": ""
}

[node name="gun_shot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = 12.0

[connection signal="timeout" from="first/First_Timer" to="." method="_on_First_Timer_timeout"]
[connection signal="timeout" from="plus/Plus_Timer" to="." method="_on_Plus_Timer_timeout"]
[connection signal="timeout" from="second/Second_Timer" to="." method="_on_Second_Timer_timeout"]
[connection signal="timeout" from="Duration_timer" to="." method="_on_Duration_timer_timeout"]
